Create a Header and Hero Text

--- a/index.html
+++ b/index.html
@@ -16,9 +16,24 @@
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous"> -->
 </head>
 <body>
-    
+    <!-- Conatiner That Contains The Whole Webpage -->
     <div id="webpage-container">
+        <!-- Header -->
+        <header>
+            <!-- NAV Bar -->
+            <nav>
+                <span><a href="#">About Me</a></span>
+                <span><a href="#">Education</a></span>
+                <span><a href="#">Skills</a></span>
+                <span><a href="#">Projects</a></span>
+                <span><a href="#">Contact</a></span>
+            </nav>
 
+            <h1 id="dp-name">Khanyiso Haman</h1>
+            <h3 id="sub-text">Dr.West, Legend of Legends</h3>
+        </header>
+
+        <div id="dp-pic"></div>
     </div>
 
     <!-- Links -->
