change how to open document

--- a/index.html
+++ b/index.html
@@ -268,11 +268,11 @@
             <article class="contact-block">
                 <h3>Contact Details</h3>
                 <ul>
-                    <li>Call me by <b>081 429 2258</b></li>
+                    <li>Call me by <b><a href="081 429 2258">081 429 2258</a></b></li>
                     <li>Email me at <a href="mailto:khanyisohaman@gmail.com">khanyisohaman@gmail.com</a></li>
                     <li>Check more of my work at <a href="https://github.com/KhanyisoHaman">https://github.com/KhanyisoHaman</a></li>
                 </ul>
-                <p><a class="download" href="media/documents/Khanyiso Haman - Résume .pdf">Download CV</a></p>
+                <p><a target="_blank" class="download" href="media/documents/Khanyiso Haman - Résume .pdf">Download CV</a></p>
             </article>
             <!-- Links -->
             <article class="contact-block">
