fix bg image url

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 margin: 0;
                 padding: 0;
                 height: 100vh;
-                background-image: url(../media/images/background/resume-web-holding-page.png);
+                background-image: url(./media/images/background/resume-web-holding-page.png);
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
